k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-service
  namespace: voting-app

spec:
  type: NodePort

  selector:
    app: backend

  ports:
    - port: 5000
      targetPort: 5000
