k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service
  namespace: voting-app

spec:
  type: NodePort

  selector:
    app: frontend

  ports:
  - protocol: TCP
    port: 3000
    targetPort: 80
